# flame-sp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  coding-add.md  do_cmake.sh
src/: CMakeLists.txt  Makefile  README.md
src/chunkstore/: Makefile  chunkmap.h  chunkstore.h  cs.cc  cs.h  log_cs.h  test.cc
src/chunkstore/filestore/: Makefile  chunkstorepriv.h  chunkutil.cc  chunkutil.h  filechunk.cc  filechunkmap.cc  filechunkmap.h  filestore.cc  filestore.h  filestoreconf.cc  filestoreconf.h  object.cc  object.h
src/chunkstore/nvmestore/: Makefile  chunkblobmap.cc  chunkblobmap.h  iochannels.cc  nvmechunk.cc  nvmechunkmap.cc  nvmechunkmap.h  nvmeconf.cc  nvmeconf.h  nvmestore.cc  nvmestore.h
src/chunkstore/simstore/: Makefile  simstore.cc  simstore.h
src/cluster/: Makefile  clt_agent.h  clt_mgmt.h  cluster.h  csd_mgmt.cc  csd_mgmt.h  log_cluster.h
src/cluster/clt_my/: Makefile  my_agent.h  my_mgmt.cc  my_mgmt.h
src/cml/: Makefile  flame.cc
src/common/: Makefile  RingQueue.h  atom_queue.h  cmdline.cc  cmdline.h  config.cc  config.h  context.cc  context.h  convert.cc  convert.h  log.cc  log.h  logger.cc  logger.h  ring_buffer.h  ring_queue.h
src/common/thread/: Makefile  cond.h  io_priority.cc  io_priority.h  mutex.cc  mutex.h  rw_lock.h  signal.cc  signal.h  spin_lock.h  thread.cc  thread.h
src/csd/: Makefile  config_csd.h  csd.cc  csd_admin.cc  csd_admin.h  csd_context.h  csd_service.h  log_csd.h
src/csm/: Makefile  csm.cc
src/examples/msg/: CMakeLists.txt  flame_client.cfg  flame_mgr.cfg  msg.h  msg_client.cc  msg_mgr.cc
src/gtest/common/: gtest_cmdline.cc  gtest_cmdline.h  gtest_config.cc  gtest_config.h  gtest_context.cc  gtest_context.h  gtest_convert.cc  gtest_convert.h  gtest_log.cc  gtest_log.h
src/include/: acconfig-h.in.cmake  buffer.h  callback.h  cmd.h  config.h  context.h  csdc.h  csds.h  flame.h  internal.h  libflame.h  log.h  meta.h  objects.h  request.h  retcode.h  spdk_common.h  spolicy.h  types.h
src/include/cmd/: spec.h  types.h
src/include/libflame/: buffer.h  libflame.h  status.h
src/layout/: Makefile  calculator.cc  calculator.h  calculator_my.h  calculator_simple.h  eamou.cc  eamou.h  easdl.cc  easdl.h  layout-bk.h  layout.h  layout_types.h  poll_layout.cc  poll_layout.h
src/libflame/: CMakeLists.txt  csdc.cc  libflame.cc
src/libflame/libchunk/: CMakeLists.txt  chunk_cmd_service.h  client_test.cc  cmd_service_mapper.cc  flame_client.cfg  libchunk.cc  libchunk.h  log_libchunk.h  msg_handle.cc  msg_handle.h  msg_recv.cc  msg_recv.h  server_test.cc
src/memzone/: BuddyAllocator.cc  BuddyAllocator.h  LockFreeList.h  MemoryManager.cc  MemoryManager.h  RdmaMem.cc  RdmaMem.h  log_memory.h  memory_conf.cc  memory_conf.h  mz_types.h  rdma_mz.cc  rdma_mz.h  spdk_common.h  std_mz.h
src/memzone/rdma/: BuddyAllocator.cc  BuddyAllocator.h  LockFreeList.h  RdmaMem.cc  RdmaMem.h  memory_conf.cc  memory_conf.h  rdma_mz_log.h
src/metastore/: Makefile  log_ms.h  metastore.h  ms.cc  ms.h
src/metastore/sqlms/: Makefile  models.h  sqlms.cc  sqlms.h
src/mgr/: Makefile  config_mgr.h  log_mgr.h  mgr.cc  mgr.h  mgr_context.h  mgr_server.cc  mgr_server.h  mgr_service.h
src/mgr/chkm/: Makefile  chk_mgmt-bk.cc  chk_mgmt.cc  chk_mgmt.h  log_chkm.h
src/mgr/chunk/: chk_mgmt.h
src/mgr/chunkm/: chk_mgmt.cc  chk_mgmt.h
src/mgr/csdm/: Makefile  csd_mgmt.cc  csd_mgmt.h  log_csdm.h
src/mgr/volm/: Makefile  log_volm.h  vol_mgmt.cc  vol_mgmt.h
src/mk/: env.mk  googletest.mk  grpc.mk  mysql.mk  objs.mk  spdk.mk
src/msg/: Connection.cc  Connection.h  ListenPort.h  Message.h  Msg.cc  Msg.h  MsgManager.cc  MsgManager.h  MsgWorker.cc  MsgWorker.h  NetHandler.cc  NetHandler.h  Session.cc  Session.h  Stack.cc  Stack.h  msg_common.h  msg_context.cc  msg_context.h  msg_core.h  msg_data.h  msg_def.h  msg_module.cc  msg_module.h  msg_types.cc  msg_types.h
src/msg/dispatcher/: Channel.h  Dispatcher.cc  Dispatcher.h  MsgChannel.h  MsgDispatcher.cc  MsgDispatcher.h
src/msg/event/: EventPoller.cc  EventPoller.h  event.h
src/msg/internal/: bitmap.h  buffer_list.h  byteorder.h  errno.cc  errno.h  int_types.h  msg_buffer.h  msg_buffer_list.h  msg_config.cc  msg_config.h  node_addr.cc  node_addr.h  ref_counted_obj.h  types.h  types_helper.cc  types_helper.h  util.cc  util.h
src/msg/rdma/: BuddyAllocator.cc  BuddyAllocator.h  Infiniband.cc  Infiniband.h  LockFreeList.h  MemoryManager.cc  MemoryManager.h  RdmaConnection.cc  RdmaConnection.h  RdmaListenPort.cc  RdmaListenPort.h  RdmaMem.cc  RdmaMem.h  RdmaPrepConn.cc  RdmaPrepConn.h  RdmaStack.cc  RdmaStack.h
src/msg/socket/: TcpConnection.cc  TcpConnection.h  TcpListenPort.cc  TcpListenPort.h  TcpStack.cc  TcpStack.h
src/msg/spdk/: SpdkMsgWorker.cc  SpdkMsgWorker.h
src/orm/: Makefile  cols.h  driver.h  engine.cc  engine.h  handle.h  opts.h  orm.h  stmt.cc  stmt.h  table.h  value.h
src/orm/examples/: Makefile  driver_exp.cc  engine_exp.cc  stmt_example.cc  stmt_exp.cc  stmt_test.cc  test.cc
src/orm/my_impl/: Makefile  README.md  log_mysql.h  my_impl.cc  my_impl.h  public.h
src/proto/: Makefile
src/service/: Makefile  csds_client.cc  csds_client.h  csds_service.cc  csds_service.h  flame_client.cc  flame_client.h  flame_service.cc  flame_service.h  internal_client.cc  internal_client.h  internal_service.cc  internal_service.h  log_service.h
src/spolicy/: Makefile  sp_easy.h  sp_types.h  spolicy.cc  spolicy.h
src/tests/: CMakeLists.txt  Makefile  env.mk
src/tests/libchunk/: CMakeLists.txt  client_test.cc  flame_mgr.cfg  server_test.cc
src/tests/memzone/: CMakeLists.txt  allocator_test.cc  allocator_test.h  flame_mgr.cfg
src/tests/msg/: CMakeLists.txt  analysis.py  buddy_allocator_unittest.cc  buddy_allocator_ut.cc  env_init.sh
src/tests/queue/: Makefile  lockless.cc
src/tests/util/: Makefile  str_ut.cc
src/trash/: Makefile.bk  gw_service.cc  gw_service.h
src/util/: Makefile  clog.h  fmt.h  fs_util.cc  fs_util.h  log_helper.h  option_parser.cc  str_util.cc  str_util.h  utime.h
src/work/: Makefile  timer_work.cc  timer_work.h  work_base.h  work_queue.h
(+88 files in other folders)
